k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sporttrack
  labels:
    app: sporttrack
